[tool.poetry]
name = "does_that_kinda_make_sense"
version = "0.1.0"
description = ""
authors = ["Claudio Spiess <claudiosv@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
srt = "^3.5.0"
m3u8 = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
